[package]
authors = ["Matt Logan <mathewlogan90@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "adc-example"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
nb = "0.1.2"
panic-halt = "0.2.0"
cc3220sf-hal = "0.2.0"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

# this lets you use `cargo fix`!
[[bin]]
name = "adc-example"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
